--- a/style.css
+++ b/style.css
@@ -1,13 +1,9 @@
-.content{
-    position: relative;
-    bottom: 30px;   
-    font-size: 28px;
-    color: white;
-    margin-left: 10px;
-    
+body{
+    margin: 0;
+    padding: 0;
 }
 #table{
     border: 0;
-    border-spacing: 0;
     border-collapse: collapse;
+    
 }
