--- a/style.css
+++ b/style.css
@@ -1,9 +1,13 @@
-body{
-    margin: 0;
-    padding: 0;
+.content{
+    position: relative;
+    bottom: 30px;   
+    font-size: 28px;
+    color: white;
+    margin-left: 10px;
+    
 }
 #table{
     border: 0;
+    border-spacing: 0;
     border-collapse: collapse;
-    
 }
